--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="images/Logo.png" class="logo">
 
         <nav>
-            <a href="#">Início</a>
+            <a href="#">Conta</a>
             <a href="#">Produtos</a>
             <a href="#">Sobre</a>
             <a href="#">Contato</a>
@@ -191,3 +191,4 @@
 
 </body>
 </html>
+
