--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redduck - Loja Gamer</title>
-    <link rel="stylesheet" href="Redduck.css">
+    <meta charset="UTF-8">  <!-- permite caracteres como ç, acentos, etc -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- deixa a página responsiva em celulares. -->
+    <title>Redduck - Loja Gamer</title>  <!-- texto que aparece na aba do navegador. -->
+    <link rel="stylesheet" href="Redduck.css">  <!--carrega arquivos CSS externos -->
 </head>
 
-<body>
-
-<header>
+<body>   <!-- É onde fica tudo o que aparece na tela -->
+<!-- Essas são chamadas tags semânticas, porque dão significado ao conteúdo.-->
+<header> 
     <div class="topo">
         <img src="images/Logo.png" class="logo">
 
@@ -24,7 +24,7 @@
 
 <main>
 
-    <!-- MOUSES -->
+    carrega arquivos CSS externos
     <section class="linha">
         <h2>Mouses</h2>
         <div class="produtos">
@@ -191,4 +191,5 @@
 
 </body>
 </html>
+
 
